RESOLVED FIXED 129035
Inner text element should not use -webkit-user-modify
https://bugs.webkit.org/show_bug.cgi?id=129035
Summary Inner text element should not use -webkit-user-modify
Ryosuke Niwa
Reported 2014-02-19 01:11:51 PST
Use contenteditable content attribute instead in order to resolve the bug 129034.
Attachments
Done the refactoring (26.13 KB, patch)
2014-02-21 00:30 PST, Ryosuke Niwa
no flags
Reverted xcworkspace change (22.30 KB, patch)
2014-02-21 00:33 PST, Ryosuke Niwa
no flags
Fixed EFL build (22.50 KB, patch)
2014-02-21 00:58 PST, Ryosuke Niwa
no flags
Reveted erronous test change to input-maxlength-unsupported.html (21.90 KB, patch)
2014-02-21 17:18 PST, Ryosuke Niwa
kling: review+
Ryosuke Niwa
Comment 1 2014-02-21 00:30:47 PST
Created attachment 224838 [details] Done the refactoring
Ryosuke Niwa
Comment 2 2014-02-21 00:33:21 PST
Created attachment 224839 [details] Reverted xcworkspace change
Ryosuke Niwa
Comment 3 2014-02-21 00:58:24 PST
Created attachment 224840 [details] Fixed EFL build
Ryosuke Niwa
Comment 4 2014-02-21 17:18:26 PST
Created attachment 224930 [details] Reveted erronous test change to input-maxlength-unsupported.html
Andreas Kling
Comment 5 2014-02-21 17:25:57 PST
Comment on attachment 224930 [details] Reveted erronous test change to input-maxlength-unsupported.html r=me
Ryosuke Niwa
Comment 6 2014-02-21 20:04:11 PST
Note You need to log in before you can comment on or make changes to this bug.