Source/WebCore/rendering/RenderTextControl.cpp
@@ -22,6 +22,7 @@
 #include "config.h"
 #include "RenderTextControl.h"
 
+#include "CSSPrimitiveValueMappings.h"
 #include "HTMLTextFormControlElement.h"
 #include "HitTestResult.h"
 #include "RenderText.h"
@@ -29,6 +30,7 @@
 #include "RenderTheme.h"
 #include "ScrollbarTheme.h"
 #include "StyleInheritedData.h"
+#include "StyleProperties.h"
 #include "TextControlInnerElements.h"
 #include "VisiblePosition.h"
 #include <wtf/unicode/CharacterNames.h>
@@ -72,15 +74,6 @@ void RenderTextControl::styleDidChange(StyleDifference diff, const RenderStyle* 
     textFormControlElement().updatePlaceholderVisibility(false);
 }
 
-static inline bool updateUserModifyProperty(const HTMLTextFormControlElement& element, RenderStyle* style)
-{
-    bool isDisabled = element.isDisabledFormControl();
-    bool isReadOnlyControl = element.isReadOnly();
-
-    style->setUserModify((isReadOnlyControl || isDisabled) ? READ_ONLY : READ_WRITE_PLAINTEXT_ONLY);
-    return isDisabled;
-}
-
 void RenderTextControl::adjustInnerTextStyle(const RenderStyle* startStyle, RenderStyle* textBlockStyle) const
 {
     // The inner block, if present, always has its direction set to LTR,
@@ -88,8 +81,16 @@ void RenderTextControl::adjustInnerTextStyle(const RenderStyle* startStyle, Rend
     textBlockStyle->setDirection(style().direction());
     textBlockStyle->setUnicodeBidi(style().unicodeBidi());
 
-    bool disabled = updateUserModifyProperty(textFormControlElement(), textBlockStyle);
-    if (disabled)
+    HTMLTextFormControlElement& control = textFormControlElement();
+    if (HTMLElement* innerText = control.innerTextElement()) {
+        if (const StyleProperties* properties = innerText->presentationAttributeStyle()) {
+            RefPtr<CSSValue> value = properties->getPropertyCSSValue(CSSPropertyWebkitUserModify);
+            if (value && value->isPrimitiveValue())
+                textBlockStyle->setUserModify(toCSSPrimitiveValue(*value));
+        }
+    }
+
+    if (control.isDisabledFormControl())
         textBlockStyle->setColor(theme().disabledTextColor(textBlockStyle->visitedDependentColor(CSSPropertyColor), startStyle->visitedDependentColor(CSSPropertyBackgroundColor)));
 #if PLATFORM(IOS)
     if (textBlockStyle->textSecurity() != TSNONE && !textBlockStyle->isLeftToRightDirection()) {
@@ -133,13 +134,6 @@ int RenderTextControl::textBlockLogicalWidth() const
         unitWidth -= innerText->renderBox()->paddingStart() + innerText->renderBox()->paddingEnd();
 
     return unitWidth;
-}
-
-void RenderTextControl::updateFromElement()
-{
-    TextControlInnerTextElement* innerText = innerTextElement();
-    if (innerText && innerText->renderer())
-        updateUserModifyProperty(textFormControlElement(), &innerText->renderer()->style());
 }
 
 int RenderTextControl::scrollbarThickness() const
